--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "swapy": "^1.0.5",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1"
   },
